--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+absl-py==0.15.0
 argon2-cffi==20.1.0
+astroid==2.11.7
+astunparse==1.6.3
 async-generator==1.10
 atomicwrites==1.4.0
 attrs==21.4.0
@@ -6,22 +9,36 @@ backcall==0.2.0
 beautifulsoup4==4.10.0
 bleach==4.1.0
 bs4==0.0.1
+cached-property==1.5.2
+cachetools==4.2.4
 catboost==1.0.6
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.12
+clang==5.0
 click==7.1.2
 colorama==0.4.4
 cycler==0.11.0
+dataclasses==0.8
 decorator==5.1.1
 defusedxml==0.7.1
+dill==0.3.4
 entrypoints==0.3
+enum34==1.1.10
+flatbuffers==1.12
+gast==0.4.0
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
 graphviz==0.19.1
+grpcio==1.47.0
+h5py==3.1.0
 idna==3.3
 importlib-metadata==4.8.3
 ipykernel==5.3.4
 ipython==7.16.1
 ipython-genutils==0.2.0
+isort==5.10.1
 jedi==0.17.2
 Jinja2==3.0.3
 joblib==1.0.0
@@ -30,12 +47,20 @@ jupyter-client==7.1.2
 jupyter-core==4.8.1
 jupyter-tabnine==1.2.3
 jupyterlab-pygments==0.1.2
+jupyterthemes==0.20.0
+keras==2.6.0
+Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
+lazy-object-proxy==1.7.1
 lazypredict==0.2.9
+lesscpy==0.15.0
 lightgbm==2.3.1
+llvmlite==0.36.0
+Markdown==3.3.7
 MarkupSafe==2.0.1
 Mathematics-Module==0.1
 matplotlib==3.3.4
+mccabe==0.7.0
 mistune==0.8.4
 mlxtend==0.19.0
 more-itertools==8.13.0
@@ -44,21 +69,31 @@ nbconvert==6.0.7
 nbformat==5.1.3
 nest-asyncio==1.5.1
 notebook==6.4.3
-numpy==1.19.1
+numba==0.53.1
+numpy==1.19.5
+oauthlib==3.2.0
+opt-einsum==3.3.0
 packaging==21.3
 pandas==1.0.5
+pandas-ml==0.6.1
 pandocfilters==1.5.0
 parso==0.7.1
 pickleshare==0.7.5
 Pillow==8.4.0
 pip==21.2.2
+platformdirs==2.4.0
 plotly==5.9.0
 pluggy==0.13.1
+ply==3.11
 prometheus-client==0.13.1
 prompt-toolkit==3.0.20
+protobuf==3.19.4
 py==1.11.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 Pygments==2.11.2
+pylint==2.13.9
 pyparsing==3.0.4
 pyrsistent==0.17.3
 pytest==5.4.3
@@ -71,6 +106,8 @@ pywinpty==0.5.7
 PyYAML==5.3.1
 pyzmq==22.2.1
 requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.9
 scikit-learn==0.23.1
 scipy==1.5.4
 seaborn==0.11.2
@@ -80,18 +117,28 @@ six==1.15.0
 soupsieve==2.3.1
 squarify==0.4.3
 tenacity==8.0.1
+tensorboard==2.6.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.6.2
+tensorflow-estimator==2.6.0
+termcolor==1.1.0
 terminado==0.9.4
 testpath==0.5.0
 threadpoolctl==3.1.0
+tomli==1.2.3
 tornado==6.1
 tqdm==4.56.0
 traitlets==4.3.3
-typing_extensions==4.1.1
+typed-ast==1.5.4
+typing-extensions==3.7.4.3
 ujson==4.3.0
 urllib3==1.26.8
 wcwidth==0.2.5
 webencodings==0.5.1
+Werkzeug==2.0.3
 wheel==0.37.1
 wincertstore==0.2
+wrapt==1.12.1
 xgboost==1.1.1
 zipp==3.6.0
